--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,8 @@
 }
 
 .navbar .logo{
-    width: 150px;
+    width: 80px;
+    /* height: 100px; */
 }
 
 .navbar-menu{
@@ -109,5 +110,8 @@
 @media (max-width:750px) {
     .navbar-menu{
         display: none;
+    }
+    .navbar .logo{
+        width: 55px;
     }
 }
